# rust-ucs-fe

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  Makefile.toml  Makefile1.md  Makefile2.md  README.md  build.rs  ci.yml  deny.toml  rust-toolchain.toml
.cargo/: audit.toml  config.toml
config/: dev.toml  prod.toml  sit.toml
configs/: sit.toml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  router.rs  state.rs
crates/api/src/handlers/: health.rs  mod.rs  verification.rs
crates/api/src/middleware/: logger.rs  metrics.rs  mod.rs  ratelimit.rs  recover.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  lib.rs  response.rs  utils.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  merchant_rule.rs  template.rs  validation_record.rs
crates/infra/: Cargo.toml
crates/infra/src/: config.rs  db.rs  lib.rs  redis.rs  tracing.rs
crates/infra/src/clients/: mcs.rs  mod.rs  uss.rs
crates/repository/: Cargo.toml
crates/repository/src/: lib.rs  merchant_rule.rs  validation_record.rs
crates/service/: Cargo.toml
crates/service/src/: cron.rs  field_cache.rs  lib.rs  verification.rs
scripts/: build.sh  run.sh  rust-upgrade.sh
src/: app_state.rs  main.rs  masking.rs  observability.rs  telemetry.rs
src/client/: mcs.rs  mod.rs  uss.rs  wps.rs
src/config/: aws.rs  mod.rs
src/error/: mod.rs
src/handler/: health.rs  mod.rs  player_verification.rs  player_verification_test.rs
src/infra/: mod.rs
src/middleware/: error_handler.rs  logger.rs  metrics.rs  mod.rs  recover.rs  request_logger.rs  trace.rs
src/model/: field_id_uss_mapping.rs  merchant_rule.rs  mod.rs  template.rs  validation_record.rs
src/pkg/: concurrency.rs  constant.rs  conv.rs  helper.rs  kafka.rs  logs.rs  math.rs  memstats.rs  metrics.rs  mod.rs  zlog.rs
src/repository/: field_id_uss_mapping.rs  merchant_rule.rs  mod.rs  validation_record.rs
src/router/: mod.rs  routes.rs  swagger.rs
src/service/: cron.rs  field_cache.rs  field_id_uss_mapping_cache.rs  finance_history.rs  mod.rs  player_verification.rs
src/types/: req.rs  resp.rs
xtask/: Cargo.toml
xtask/src/: main.rs
