[package]
name = "tcg-ucs-fe"
version = "0.1.0"
edition = "2024"
description = "Player Self-Service Password Reset — UCS-FE (Rust/Axum port)"

[[bin]]
name = "ucs-fe"
path = "src/main.rs"

[dependencies]
# ── Web framework ─────────────────────────────────────────────────────────────
axum            = { version = "0.8",  features = ["macros"] }
tokio           = { version = "1",    features = ["full"] }
tower           = { version = "0.5"  }
tower-http      = { version = "0.6",  features = ["cors", "trace", "timeout", "request-id"] }
hyper           = { version = "1" }

# ── Serialization ─────────────────────────────────────────────────────────────
serde           = { version = "1",    features = ["derive"] }
serde_json      = "1"

# ── HTTP client (USS / MCS / WPS) ─────────────────────────────────────────────
reqwest         = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# ── Configuration ─────────────────────────────────────────────────────────────
config          = { version = "0.14", features = ["toml"] }
toml            = "0.8"

# ── Logging / Tracing ─────────────────────────────────────────────────────────
tracing                  = "0.1"
tracing-subscriber       = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# ── Error handling ────────────────────────────────────────────────────────────
anyhow          = "1"
thiserror       = "2"

# ── AWS (Secrets Manager) ─────────────────────────────────────────────────────
aws-config      = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"

# ── Oracle DB ─────────────────────────────────────────────────────────────────
# https://github.com/kubo/rust-oracle
# Requires Oracle Instant Client; set LD_LIBRARY_PATH / DYLD_LIBRARY_PATH.
oracle          = { version = "0.6.3", features = ["chrono"] }
r2d2            = "0.8"

# ── Redis ─────────────────────────────────────────────────────────────────────
redis           = { version = "0.27", features = ["tokio-comp", "aio", "connection-manager"] }

# ── Cron / Scheduling ─────────────────────────────────────────────────────────
# Interval-based jobs are implemented with tokio::time::interval (no extra crate needed).

# ── Metrics (Prometheus) ──────────────────────────────────────────────────────
prometheus      = { version = "0.13", features = ["process"] }
axum-prometheus = "0.7"

# ── Rate limiting ─────────────────────────────────────────────────────────────
governor        = "0.7"
tower_governor  = { version = "0.8", features = ["axum"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid            = { version = "1",    features = ["v4"] }
chrono          = { version = "0.4",  features = ["serde"] }
once_cell       = "1"
async-trait     = "0.1"
dashmap         = "6"
futures         = "0.3"
tokio-util      = "0.7"
bytes           = "1"
