[workspace]
members = ["xtask"]

[package]
name = "ucs-fe"
version = "0.1.1"
edition = "2024"
authors     = ["norman188@gmail.com"]
description = "Player Self-Service Password Reset — UCS-FE (Rust/Axum port)"
repository  = "git@github.com:romalin99/rust-ucs-fe.git"
readme      = "README.md"
license     = "MIT OR Apache-2.0"
keywords    = ["web", "async", "api","axum"]
categories  = ["web-programming"]
rust-version = "1.94"

[[bin]]
name = "ucs-fe"
path = "src/main.rs"

[dependencies]
# ── Web framework ─────────────────────────────────────────────────────────────
axum            = { version = "0.8",  features = ["macros"] }
tokio           = { version = "1",    features = ["full"] }
tower           = { version = "0.5"  }
tower-http      = { version = "0.6",  features = ["cors", "trace", "timeout", "request-id"] }
hyper           = { version = "1" }
http-body-util  = "0.1"

# ── Serialization ─────────────────────────────────────────────────────────────
serde           = { version = "1",    features = ["derive"] }
serde_json      = "1"

# ── HTTP client (USS / MCS / WPS) ─────────────────────────────────────────────
reqwest         = { version = "0.13.2", features = ["json", "rustls"], default-features = false }

# ── Configuration ─────────────────────────────────────────────────────────────
config          = { version = "0.15.22", features = ["toml"] }
toml            = "1.1.2"

# ── Logging / Tracing ─────────────────────────────────────────────────────────
tracing                  = "0.1"
tracing-subscriber       = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# ── Error handling ────────────────────────────────────────────────────────────
anyhow          = "1"
thiserror       = "2"

# ── AWS (Secrets Manager) ─────────────────────────────────────────────────────
aws-config      = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"

# ── Oracle DB ─────────────────────────────────────────────────────────────────
# https://github.com/kubo/rust-oracle
# Requires Oracle Instant Client; set LD_LIBRARY_PATH / DYLD_LIBRARY_PATH.
oracle          = { version = "0.6.3", features = ["chrono"] }
r2d2            = "0.8"

# ── Redis ─────────────────────────────────────────────────────────────────────
redis           = { version = "1.2.0", features = ["tokio-comp", "aio", "connection-manager"] }

# ── Cron / Scheduling ─────────────────────────────────────────────────────────
# Interval-based jobs are implemented with tokio::time::interval (no extra crate needed).

# ── Metrics (Prometheus) ──────────────────────────────────────────────────────
prometheus      = { version = "0.14", features = ["process"] }
axum-prometheus = "0.10"

# ── Rate limiting ─────────────────────────────────────────────────────────────
governor        = "0.10.4"
tower_governor  = { version = "0.8", features = ["axum"] }

# ── Utilities ─────────────────────────────────────────────────────────────────
uuid            = { version = "1",    features = ["v4"] }
chrono          = { version = "0.4",  features = ["serde"] }
once_cell       = "1"
async-trait     = "0.1"
dashmap         = "6"
futures         = "0.3"
tokio-util      = "0.7"
bytes           = "1"


# ===== 开发依赖 =====
[dev-dependencies]
tokio-test   = "0.4"
tempfile     = "3.27"
wiremock     = "0.6"          # HTTP mock
criterion    = "0.8"          # 基准测试
proptest     = "1.11"          # 属性测试
mockall      = "0.14"         # Mock生成

# ===== 构建依赖 =====
[build-dependencies]
cc           = "1.2"

# ===== 功能特性 =====
[features]
default = []

# ── Build profiles ─────────────────────────────────────────────────────────────
# ===== 编译优化 =====
[profile.release]
opt-level    = 3              # 最高优化
lto          = true           # 链接时优化
codegen-units = 1             # 减少代码生成单元
panic        = "abort"        # 直接abort（减小体积）
strip        = true           # 移除符号表
incremental  = false          # 禁用增量编译

[profile.dev]
opt-level    = 0              # 不优化（加快编译）
debug        = true           # 包含调试信息
debug-assertions = true       # 启用调试断言
overflow-checks  = true       # 整数溢出检查

[profile.dev.package."*"]
opt-level = 3              # But keep dependencies fully optimised even in dev
