[package]
name    = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }
domain      = { path = "../domain" }
service     = { path = "../service" }
infra       = { path = "../infra" }
axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
governor    = { workspace = true }
metrics     = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
