[package]
name    = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum        = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
oracle      = { workspace = true }
redis       = { workspace = true }
reqwest     = { workspace = true }
