[package]
name    = "infra"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }
serde       = { workspace = true }
serde_json  = { workspace = true }
config      = { workspace = true }
oracle      = { workspace = true }
r2d2        = { workspace = true }
redis       = { workspace = true }
reqwest     = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
chrono      = { workspace = true }
anyhow      = { workspace = true }
