[package]
name    = "repository"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }
domain      = { path = "../domain" }
infra       = { path = "../infra" }
oracle      = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
anyhow      = { workspace = true }
serde_json  = { workspace = true }
