[package]
name    = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
common      = { path = "../common" }
domain      = { path = "../domain" }
repository  = { path = "../repository" }
infra       = { path = "../infra" }
tokio       = { workspace = true }
tracing     = { workspace = true }
dashmap     = { workspace = true }
chrono      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
redis       = { workspace = true }
anyhow      = { workspace = true }
